--- a/mjml-gulp/mjml-gulp-starter/src/index.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/index.mjml
@@ -8,9 +8,19 @@
       <mj-class name="footer-text" align="center" color="#ffffff" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" font-size="15px" padding="0 25px"></mj-class>
       <mj-navbar-link padding="0 15px" font-weight="bold" font-size="14px"></mj-navbar-link>
     </mj-attributes>
-    <mj-style inline="inline">a { text-decoration: none; color: inherit; }</mj-style>
+    <mj-style>
+            @media (max-width: 520px) {
+        .hide {display: none}
+        .hidelarge { display: block; }
+        }
+        @media (min-width: 500px) {
+        .hidelarge {
+        display: none;
+        }
+        }
+      </mj-style>
   </mj-head>
-  <mj-body background-color="#ffffff">
+  <mj-body width="100%" background-color="#ffffff">
     <mj-section padding-bottom="20px" padding-top="20px">
       <mj-group>
         <mj-column>
@@ -18,8 +28,8 @@
         </mj-column>
       </mj-group>
     </mj-section>
-    <mj-section background-color="#ffffff">
-      <mj-column>
+    <mj-section width="600px" background-color="#ffffff">
+      <mj-column width="250px">
         <mj-image src="https://funkyimg.com/i/34bDj.png" alt="Lextorium logo" align="center" width="214px" padding="10px 0 0 0"></mj-image>
         <mj-text>
         <p style="font-family: Book Antiqua, Arial; font-size: 16px; line-height: 46px; text-align: center; font-weight: 600; margin-top: 0">школа для юристов-практиков</p>
@@ -33,20 +43,30 @@
           <mj-navbar-link text-transform color="#ffffff" href="https://mjml.io">Новости</mj-navbar-link>
           <mj-navbar-link text-transform color="#ffffff" href="https://mjml.io">Курсы</mj-navbar-link>
           <mj-navbar-link text-transform color="#ffffff" href="https://mjml.io">Трансляции</mj-navbar-link>
-          <mj-navbar-link text-transform color="#ffffff" href="https://mjml.io">+7(495)123-12-12</mj-navbar-link>
+          <mj-navbar-link text-transform color="#ffffff"
+                          href="https://mjml.io" padding="0"><span class="hide"
+                  style="border-left: 2px solid #555555; padding: 12px 20px; padding-right: 0">
+              <img style="vertical-align: middle;" src="https://funkyimg.com/i/2L53S.png" alt="">+7(495)
+              123-12-12</span></mj-navbar-link>
         </mj-navbar>
+        <mj-text>
+                  <span class="hidelarge"
+                        style="text-align: center; color: white; width: 100%; margin: 0 auto;
+                        font-size: 18px; margin-top: 10px;">+7(495)
+              123-12-12</span>
+        </mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-url="https://funkyimg.com/i/34bDk.jpg" background-repeat="no-repeat" background-size="cover" padding="20px 0">
-      <mj-column width="100%">
+      <mj-column width="600px">
         <mj-text align="left" color="#ffffff" line-height="32px" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" font-size="21px" padding="106px 20px 0 20px">Путеводитель</mj-text>
       </mj-column>
-      <mj-column width="100%" vertical-align="bottom">
+      <mj-column width="600px" vertical-align="bottom">
         <mj-text align="left" color="#ffffff" line-height="46px" font-family="Book antiqua, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" font-size="46px" font-weight="600" padding="20px 20px 20px 20px">Большой курс <br /> по банкротству</mj-text>
       </mj-column>
     </mj-section>
     <mj-section mj-class="container" padding-top="20px" padding-bottom="20px">
-      <mj-column width="100%">
+      <mj-column width="560px">
         <mj-text>
           <p style="font-size: 18px; font-family: Helvetica, Arial">Ксения, здравствуйте!</p>
           <p style="font-size: 16px; line-height: 24px; font-family: Arial;"> Колония-поселение № 22 ФСИН по Хабаровскому краю провела электронный аукцион на закупку картошки на посадку. Не много, не мало, а 100 тонн. Этот конкурс выиграла некая организация по цене 1 542 500 руб. Итого чуть более 15 р. за кг. Договор заключён 29 марта 2016 г. На поставку 40 дней. </p>
@@ -56,7 +76,7 @@
     </mj-section>
     
         <mj-section mj-class="container" padding-top="20px" padding-bottom="20px">
-      <mj-column width="100%">
+      <mj-column width="560px">
         <mj-text>
           
           <p style="font-size: 36px; font-weight: 600; font-family: Book Antiqua, Arial">Фишки курса</p>
@@ -64,7 +84,10 @@
           <ul style="list-style: none; padding: 0;">
          <li style="display: inline-block; padding-right:50px;"> <p style="line-height: 18px; margin: 10px 0;font-size:16px; color:#000; font-family:Arial,Helvetica,sans-serif; color:#354552; border-left: 2px solid #ffd44c;padding-left: 20px;">Доступ предоставляется <br/>
 навсегда</p></li>
-           <li style="display: inline-block; padding-right: 20px;"><p style="line-height: 18px; margin: 10px 0;font-size:16px; color:#000; font-family:Arial,Helvetica,sans-serif; color:#354552; border-left: 2px solid #ffd44c;padding:8px 0; padding-left: 20px;">Видео формат на 11 часов
+           <li style="display: inline-block; padding-right: 20px; vertical-align: top"><p style="line-height: 18px;
+           margin: 10px 0;font-size:16px; color:#000; font-family:Arial,Helvetica,sans-serif; color:#354552;
+           border-left: 2px solid #ffd44c; padding-left: 20px; height: 36px; vertical-align: top">Видео формат на 11
+               часов
 </p></li> </ul>
           </mj-column>
           <mj-column width="50%">
@@ -87,7 +110,7 @@
           </mj-column>
        </mj-section>
     <mj-section mj-class="container">
-       <mj-column width="50%">
+       <mj-column width="50%" padding-bottom="20px">
         <mj-text>
          <p style="font-family: Helvetica, Georgia; font-size: 21px;">23 января</p>
           <p style="font-size: 16px;">Оспаривание сделок при банкростве: 
