--- a/mjml-gulp/mjml-gulp-starter/src/index.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/index.mjml
@@ -57,16 +57,17 @@
         </mj-text>
       </mj-column>
     </mj-section>
-    <mj-section background-url="https://funkyimg.com/i/34bDk.jpg" background-repeat="no-repeat" background-size="cover" padding="20px 0">
-      <mj-column width="600px">
+    <mj-section width="100%" background-url="https://funkyimg.com/i/34bDk.jpg" background-repeat="no-repeat"
+                 background-size="cover" padding="20px 0">
+      <mj-column width="100%">
         <mj-text align="left" color="#ffffff" line-height="32px" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" font-size="21px" padding="106px 20px 0 20px">Путеводитель</mj-text>
       </mj-column>
-      <mj-column width="600px" vertical-align="bottom">
+      <mj-column width="100%" vertical-align="bottom">
         <mj-text align="left" color="#ffffff" line-height="46px" font-family="Book antiqua, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" font-size="46px" font-weight="600" padding="20px 20px 20px 20px">Большой курс <br /> по банкротству</mj-text>
       </mj-column>
     </mj-section>
     <mj-section mj-class="container" padding-top="20px" padding-bottom="20px">
-      <mj-column width="560px">
+      <mj-column width="100%">
         <mj-text>
           <p style="font-size: 18px; font-family: Helvetica, Arial">Ксения, здравствуйте!</p>
           <p style="font-size: 16px; line-height: 24px; font-family: Arial;"> Колония-поселение № 22 ФСИН по Хабаровскому краю провела электронный аукцион на закупку картошки на посадку. Не много, не мало, а 100 тонн. Этот конкурс выиграла некая организация по цене 1 542 500 руб. Итого чуть более 15 р. за кг. Договор заключён 29 марта 2016 г. На поставку 40 дней. </p>
@@ -76,7 +77,7 @@
     </mj-section>
     
         <mj-section mj-class="container" padding-top="20px" padding-bottom="20px">
-      <mj-column width="560px">
+      <mj-column width="100%">
         <mj-text>
           
           <p style="font-size: 36px; font-weight: 600; font-family: Book Antiqua, Arial">Фишки курса</p>
