--- a/mjml-gulp/mjml-gulp-starter/src/index.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/index.mjml
@@ -2,7 +2,7 @@
   <mj-head>
     <mj-attributes>
       <mj-all padding="0px"></mj-all>
-      <mj-class name="container" padding-left="20px" padding-right="20px"></mj-class>
+      <mj-class name="container" width="560px" padding-left="20px" padding-right="20px"></mj-class>
       <mj-class name="preheader" color="#777777" font-size="11px" font-family="Ubuntu, Helvetica, Arial, sans-serif" padding="0 20px" text-decoration="underline"></mj-class>
       <mj-class name="cta" color="#FFFFFF" font-size="13px" border-radius="3px" href="https://mjml.io" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" padding="20px 25px"></mj-class>
       <mj-class name="footer-text" align="center" color="#ffffff" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" font-size="15px" padding="0 25px"></mj-class>
@@ -20,7 +20,7 @@
         }
       </mj-style>
   </mj-head>
-  <mj-body width="100%" background-color="#ffffff">
+  <mj-body width="600px" background-color="#ffffff">
     <mj-section padding-bottom="20px" padding-top="20px">
       <mj-group>
         <mj-column>
@@ -44,7 +44,7 @@
           <mj-navbar-link text-transform color="#ffffff" href="https://mjml.io">Курсы</mj-navbar-link>
           <mj-navbar-link text-transform color="#ffffff" href="https://mjml.io">Трансляции</mj-navbar-link>
           <mj-navbar-link text-transform color="#ffffff"
-                          href="https://mjml.io" padding="0"><span class="hide"
+                          href="https://mjml.io" padding="0"><span role="link" href="#" class="hide"
                   style="border-left: 2px solid #555555; padding: 12px 20px; padding-right: 0">
               <img style="vertical-align: middle;" src="https://funkyimg.com/i/2L53S.png" alt="">+7(495)
               123-12-12</span></mj-navbar-link>
@@ -57,7 +57,7 @@
         </mj-text>
       </mj-column>
     </mj-section>
-    <mj-section width="100%" background-url="https://funkyimg.com/i/34bDk.jpg" background-repeat="no-repeat"
+    <mj-section width="600px" background-url="https://funkyimg.com/i/34bDk.jpg" background-repeat="no-repeat"
                  background-size="cover" padding="20px 0">
       <mj-column width="100%">
         <mj-text align="left" color="#ffffff" line-height="32px" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" font-size="21px" padding="106px 20px 0 20px">Путеводитель</mj-text>
