--- a/mjml-gulp/mjml-gulp-starter/src/stairs.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/stairs.mjml
@@ -80,7 +80,7 @@
                 </mj-text>
                 <mj-text mj-class="container">
                     <p style="font-size: 16px; line-height: 32px; font-family: Arial,serif;">
-                        Эту фразу приписывают американцу <b>Джо Жирарду</b>, признанному Книгой рекордов Гиннесса самым
+                        Эту фразу приписывают американцу Джо Жирарду, признанному Книгой рекордов Гиннесса самым
                         успешным торговцем.
                     </p>
                 </mj-text>
