--- a/mjml-gulp/mjml-gulp-starter/src/directors.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/directors.mjml
@@ -3,7 +3,8 @@
         <mj-attributes>
             <mj-all padding="0px"></mj-all>
             <mj-class name="container" width="560px" padding-left="20px" padding-right="20px"></mj-class>
-            <mj-class name="preheader" color="#777777" font-size="11px" font-family="Ubuntu, Helvetica, Arial, sans-serif" padding="0 20px" text-decoration="underline"></mj-class>
+            <mj-class name="preheader" color="#9с9с9с" font-size="12px"
+                      font-family="Ubuntu, Helvetica, Arial, sans-serif" padding="0 20px" text-decoration="underline"></mj-class>
             <mj-class name="cta" color="#FFFFFF" font-size="13px" border-radius="3px" href="https://mjml.io" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" padding="20px 25px"></mj-class>
             <mj-class name="footer-text" align="center" color="#ffffff" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" font-size="15px" padding="0 25px"></mj-class>
             <mj-class name="hidelarge" display="none"
@@ -32,13 +33,18 @@
         <mj-section padding-bottom="20px" padding-top="20px">
             <mj-group>
                 <mj-column>
-                    <mj-text align="center" mj-class="preheader"><a href="{{_WebLetterUrl}}">Открыть в браузере</a></mj-text>
+                    <mj-text align="center"
+                             mj-class="preheader"><a style="color: #9c9c9c; font-size: 12px;" href="{{_WebLetterUrl}}">Открыть в
+                        браузере</a></mj-text>
                 </mj-column>
             </mj-group>
         </mj-section>
         <mj-section width="600px" background-color="#ffffff">
             <mj-column width="250px">
-                <mj-image src="https://funkyimg.com/i/34bDj.png" alt="Lextorium logo" align="center" width="214px" padding="10px 0 0 0"></mj-image>
+                <mj-text>
+                <a href="https://lextorium.com">
+                <img src="https://funkyimg.com/i/34bDj.png" alt="Lextorium logo" align="center" width="214px"
+                          padding="10px 0 0 0"></a></mj-text>
                 <mj-text>
                     <p style="font-family: Book Antiqua, Arial; font-size: 16px; line-height: 46px; text-align: center; font-weight: 600; margin-top: 0">школа для юристов-практиков</p>
                 </mj-text>
@@ -51,9 +57,12 @@
                     <mj-navbar-link text-transform color="#ffffff" href="https://lextorium.com/news/">Новости
                     </mj-navbar-link>
                     <mj-navbar-link text-transform color="#ffffff" href="https://lextorium.com/courses/">
-                        <span style="border-right: 2px solid #555555; padding: 12px 20px 12px 0;">Курсы</span></mj-navbar-link>
+                        <span style="padding: 12px 0 12px 0;">Курсы</span></mj-navbar-link>
                     <mj-navbar-link text-transform color="#ffffff"
-                                    href="tel:+78005513206" padding="0"><span role="link" href="tel:+78005513206"
+                                    href="tel:+78005513206" padding="0"><span style="display: inline-block;
+                                    padding-left: 30px;"
+                                                                              role="link"
+                                                                              href="tel:+78005513206"
                     >
               <img style="vertical-align: middle; padding-right: 10px;" src="https://funkyimg.com/i/2L53S.png"
                    alt="tel:+78005513206">8(800)
@@ -110,7 +119,7 @@
             </mj-column>
             <mj-column width="100%">
                 <mj-button background-color="#8bb420"
-                           href="https://lextorium.com/courses/vebinary/korporativnaya-otvetstvennost-direktorov-i-uchastnikov-yuridicheskih-lits.html" font-family="Book Antiqua,Arial" font-weight="bold" font-size="20px">Начать квест</mj-button>
+                           href="https://lextorium.com/news/zastrahovat-otvetstvennost-direktora.-nastoyaschiy-kvest-dlya-yurista.html" font-family="Book Antiqua,Arial" font-weight="bold" font-size="20px">Начать квест</mj-button>
 
 
             </mj-column>
@@ -172,10 +181,13 @@
         </mj-section>
         <mj-section background-color="#000">
             <mj-column>
-                <mj-text color="#fff" padding="5px">
+                <mj-text color="#9c9c9c" padding="15px 20px">
                     Вы получили это письмо, так как оставили свой электронный адрес на сайте <a
                         href="https://lextorium.com"
-                        style="color: #d5b13f" href="#">Lextorium.com</a>. И подтвердили согласие на получение емейл-рассылки. <a href="{{UnsubscribeUrl}}" rel="nofollow noopener noreferrer" style="color: #d5b13f" href="#">Отпишитесь</a>, если не хотите
+                        style="font-size: 14px;color: #d5b13f" href="#">Lextorium.com</a>. И подтвердили согласие на
+                    получение
+                    емейл-рассылки. <a href="{{UnsubscribeUrl}}" rel="nofollow noopener noreferrer" style="color:
+                    #d5b13f; font-size: 14px;" href="#">Отпишитесь</a>, если не хотите
                     получать важные новости и предложения.
                 </mj-text>
             </mj-column>
