--- a/mjml-gulp/mjml-gulp-starter/src/directors.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/directors.mjml
@@ -70,7 +70,7 @@
                 </mj-navbar>
             </mj-column>
         </mj-section>
-        <mj-section width="600px" background-url="https://funkyimg.com/i/36XXt.jpg" background-repeat="no-repeat"
+        <mj-section width="600px" background-url="https://funkyimg.com/i/36Y5b.jpg" background-repeat="no-repeat"
                     background-size="cover" padding="20px 0">
             <mj-column width="100%">
                 <mj-text align="left" color="#ffffff" line-height="32px"
