--- a/mjml-gulp/mjml-gulp-starter/src/directors.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/directors.mjml
@@ -65,7 +65,7 @@
                         <span style="padding: 12px 0 12px 0;">Курсы</span></mj-navbar-link>
                     <mj-navbar-link padding="10px 15px" text-transform color="#ffffff"
                                     href="tel:+78005513206" padding="0"><span style="display: inline-block;
-                                    padding-left: 30px;"
+                                    padding-left: 30px; padding-top: 10px; padding-bottom: 10px; "
                                                                               role="link"
                                                                               href="tel:+78005513206"
                     >
