--- a/mjml-gulp/mjml-gulp-starter/src/ratio.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/ratio.mjml
@@ -50,7 +50,8 @@
             вы в полном
             порядке, то
         самое
-        время<br>  почитать про: <br>
+        время почитать про:
+            <br><br>
          <span style="text-transform: uppercase; text-align: center; display:block;">Банкротство</span>
         </b></p>
     </mj-text>
