--- a/mjml-gulp/mjml-gulp-starter/src/head.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/head.mjml
@@ -2,11 +2,13 @@
     <mj-attributes>
         <mj-all padding="0px"></mj-all>
         <mj-class name="container" width="560px" padding-left="20px" padding-right="20px"></mj-class>
-        <mj-class name="preheader" color="#777777" font-size="11px" font-family="Ubuntu, Helvetica, Arial, sans-serif" padding="0 20px" text-decoration="underline"></mj-class>
+        <mj-class name="preheader" color="#9c9c9c" font-size="12px"
+                  font-family="Ubuntu, Helvetica, Arial, sans-serif" padding="0 20px" text-decoration="underline"></mj-class>
         <mj-class name="cta" color="#FFFFFF" font-size="13px" border-radius="3px" href="https://mjml.io" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" padding="20px 25px"></mj-class>
         <mj-class name="footer-text" align="center" color="#ffffff" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" font-size="15px" padding="0 25px"></mj-class>
         <mj-class name="hidelarge" display="none"
                   media="(min-width: 540px)"></mj-class>
+        <mj-class name="button" background-color="#8bb420"  font-family="Book Antiqua,Arial" font-weight="bold" font-size="20px"></mj-class>
         <mj-navbar-link padding="0 15px" font-weight="bold" font-size="14px"></mj-navbar-link>
     </mj-attributes>
     <mj-style>
@@ -18,6 +20,22 @@
         .hidelarge {
         display: none;
         }
+        }
+        .link {
+            color: #93bf3d;
+        }
+        .paragraph {
+        text-align:left;
+        font-size: 16px;
+        line-height: 24px;
+        font-family: Arial,serif;
+        padding: 20px 0 0 20px;
+        width: 100%;
+        max-width: 560px;
+        }
+
+        .paragraph-moreinfo {
+        margin: 0; padding-bottom: 10px;  padding-left: 15px;font-size: 16px; font-family:Arial, Helvetica, sans-serif;
         }
     </mj-style>
 </mj-head>
