--- a/mjml-gulp/mjml-gulp-starter/src/footer.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/footer.mjml
@@ -23,7 +23,7 @@
         <mj-text color="#fff" padding="5px 20px">
             Вы получили это письмо, так как оставили свой электронный адрес на сайте <a style="color: #d5b13f"
                                                                                         href="https://lextorium.com">
-            Lextorium.com</a>. И подтвердили согласие на получение емейл-рассылки. <a style="color: #d5b13f" href="#">Отпишитесь</a>, если не хотите
+            Lextorium.com</a>. И подтвердили согласие на получение емейл-рассылки. <a style="color: #d5b13f" href="{{UnsubscribeUrl}}">Отпишитесь</a>, если не хотите
             получать важные новости и предложения.
         </mj-text>
     </mj-column>
