--- a/mjml-gulp/mjml-gulp-starter/src/head.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/head.mjml
@@ -32,10 +32,16 @@
         padding: 20px 0 0 20px;
         width: 100%;
         max-width: 560px;
+        box-sizing: border-box;
         }
 
         .paragraph-moreinfo {
         margin: 0; padding-bottom: 10px;  padding-left: 15px;font-size: 16px; font-family:Arial, Helvetica, sans-serif;
         }
+    </mj-style>
+    <mj-style inline="inline">
+        ul li { padding-bottom: 10px; padding-left: 0; margin: 0; list-style-image: url('https://funkyimg.com/i/33wVV.png'); list-style-position: outside; font-size: 16px; line-height: 24px; vertical-align: top; } a { color: #aacb70; font-size: 16px; } a.white_link
+        { color: #ffffff; text-decoration: none; font-size: 16px; } p { padding-top: 0; font-size: 16px; line-height: 24px; }
+
     </mj-style>
 </mj-head>
