--- a/mjml-gulp/mjml-gulp-starter/src/prototypes/head.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/prototypes/head.mjml
@@ -1,4 +1,4 @@
-<mj-head>
+
     <mj-attributes>
         <mj-all padding="0px"></mj-all>
         <mj-class name="container" width="560px" padding-left="20px" padding-right="20px"></mj-class>
@@ -11,7 +11,7 @@
         <mj-class name="button" background-color="#8bb420"  font-family="Book Antiqua,Arial" font-weight="bold" font-size="20px"></mj-class>
         <mj-navbar-link padding="0 15px" font-weight="bold" font-size="14px"></mj-navbar-link>
     </mj-attributes>
-    <mj-style>
+    <mj-style inline="inline">
         @media (max-width: 520px) {
         .hide {display: none}
         .hidelarge { display: block; }
@@ -38,10 +38,26 @@
         .paragraph-moreinfo {
         margin: 0; padding-bottom: 10px;  padding-left: 15px;font-size: 16px; font-family:Arial, Helvetica, sans-serif;
         }
+
+        .button {
+        background-color: #8bb420;
+        font-family: "Book Antiqua,Arial";
+        font-weight: bold;
+        font-size: 20px;
+        width: 150px;
+        height: 20px;
+        line-height: 120%;
+        color: white;
+        text-align: center;
+        padding: 12px 25px;
+        border-radius: 3px;
+        text-decoration: none;
+        margin: 0 auto;
+        vertical-align: middle;
+        }
     </mj-style>
     <mj-style inline="inline">
-        ul li { padding-bottom: 10px; padding-left: 0; margin: 0; list-style-image: url('https://funkyimg.com/i/33wVV.png'); list-style-position: outside; font-size: 16px; line-height: 24px; vertical-align: top; } a { color: #aacb70; font-size: 16px; } a.white_link
-        { color: #ffffff; text-decoration: none; font-size: 16px; } p { padding-top: 0; font-size: 16px; line-height: 24px; }
+        ul li { padding-bottom: 10px; padding-left: 0; margin: 0; list-style-image: url('https://funkyimg.com/i/33wVV.png'); list-style-position: outside; font-size: 16px; line-height: 24px; vertical-align: top; }  } a.white_link
+         p { padding-top: 0; font-size: 16px; line-height: 24px; }
 
     </mj-style>
-</mj-head>
