--- a/mjml-gulp/mjml-gulp-starter/src/prototypes/footer.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/prototypes/footer.mjml
@@ -5,7 +5,7 @@
                                href="https://www.facebook.com/lextorium.ru/">
 
             </mj-social-element>
-            <mj-social-element padding="10px"  src="https://funkyimg.com/i/33vk2.png" href="https://vk.com/lextorium">
+            <mj-social-element padding="10px"  src="https://funkyimg.com/i/33vk2.png" href="https://www.instagram.com/lextorium/?hl=ru">
 
             </mj-social-element>
             <mj-social-element padding="10px"  src="https://funkyimg.com/i/33vkQ.png" href="https://vk.com/lextorium">
