--- a/mjml-gulp/mjml-gulp-starter/src/subsidiar.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/subsidiar.mjml
@@ -1,6 +1,7 @@
 <mjml>
     <mj-head>
         <mj-include path="prototypes/head.mjml"/>
+        <mj-preview>Если знания - то Lextorium!</mj-preview>
         <mj-title>7 своевременных мер = 0 субсидиарной ответственности</mj-title>
     </mj-head>
     <mj-body width="600px" background-color="#ffffff">
