--- a/mjml-gulp/mjml-gulp-starter/src/2708.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/2708.mjml
@@ -29,11 +29,12 @@
                     <p class="paragraph" style="padding-top: 10px;">
                         Мы все теперь связаны одной цепью: один банкрот - а все, кто заключал с ним сделки в “предбанкротный“ период,  рискуют потерять имущество в ходе дел об оспаривании должниками. Параллельно стоит встать в очередь должников  и насыщать конкурсную массу.
                     </p>
-                    <p class="paragraph" style="border-left: 2px solid #ffd44c; padding: 0; padding-left: 20px; margin-left: 20px;">
+                    <p class="paragraph" style="border-left: 2px solid #ffd44c; padding: 0; padding-left: 20px;
+                    margin-left: 20px; font-weight:bold;">
                         Как сделать это результативно, с наибольшей отдачей и чтобы еще время “на жизнь” осталось?
                     </p>
                     <p class="paragraph">
-                        Посетить семинар - интенсив по авторской методике от ведущего специалиста России по
+                        <b>Посетить семинар</b> - интенсив по авторской методике от ведущего специалиста России по
                         банкротству и получить  в свое распоряжение <b>продвинутый инструментарий для юридической работы
                         -  все через призму актуальной судебной практики и с разбором тончайших нюансов: <br>
 <center style="font-family: Arial,sans-serif; font-size: 16px;">
